Update Demo.java